--- a/public/style/view_movies/view_movies.css
+++ b/public/style/view_movies/view_movies.css
@@ -14,7 +14,9 @@
   color: #363636;
   font-size: 2.4em;
   text-align: center;
-  font-style: italic;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  /*font-style: italic;*/
 }
 
 ul {
