--- a/public/style/movies/movies_id.css
+++ b/public/style/movies/movies_id.css
@@ -1,5 +1,7 @@
 .view-movie {
-  width: 900px;
+  max-width: 900px;
+  /*max-height: 505px;*/
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,24 +11,28 @@
 
 }
 
-.view-movie-theater {
-  max-height: 100%;
-  max-width: 100%;
-}
 
 .view-movie-theater-title p {
   text-align: center;
   color: #363636;
 }
 
-.view-movie {
-
+.view-movie-theater-iframe {
+  position: relative;
+  padding-bottom: 56.25%; /* 4:3 = 75% */
+  padding-top: 0px;
+  height: 0;
+  overflow: hidden;
 }
 
 #iframe {
-  width: 900px;
-  height: 505px;
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
+
 
 .view-movie-theater-details {
   font-family: 'Montserrat-Light';
