--- a/public/style/style.css
+++ b/public/style/style.css
@@ -22,7 +22,7 @@ body {
 
 
 * {
-  border-radius: 0 !important;
+  border-radius: 0;
 }
 
 a {
@@ -50,142 +50,6 @@ button {
   padding-top: 130px;
 }
 
-#landing {
-  font-family: 'Montserrat';
-  padding-left: 40px;
-  padding-top: 100px;
-  font-size: 120px;
-  width: 700px;
-}
-
-#landing span {
-  font-size: 70px;
-}
-
-
-
-
-
-#landing {
-  background: linear-gradient(#7b4397, #dc2430);
-  background: linear-gradient(#556270, #FF6B6B);
-  background: linear-gradient(#C9FFBF, #FFAFBD);
-  background: linear-gradient(to left, #2196f3 , #f44336);
-
-  background: linear-gradient(to left, #ff4b1f , #1fddff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  background: linear-gradient(to left, #fd746c , #ff9068);
-  background: linear-gradient(to left, #FF512F , #DD2476);
-  background: linear-gradient(to left, #1D976C , #93F9B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to left, #e53935 , #e35d5b);
-  background: linear-gradient(to left, #EB3349 , #F45C43);
-    background: linear-gradient(to left, #AA076B , #61045F);
-    background: linear-gradient(to left, #f857a6 , #ff5858); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-image: linear-gradient(90deg, rgb(231, 76, 60) 25%, rgb(52, 152, 219) 100%);
-  background-image: -moz-linear-gradient(left, rgb(231, 76, 60) 25%, rgb(52, 152, 219) 100%);
-  background-image: -webkit-linear-gradient(left, rgb(231, 76, 60) 25%, rgb(52, 152, 219) 100%);
-  background-image: -o-linear-gradient(left, rgb(231, 76, 60) 25%, rgb(52, 152, 219) 100%);
-  background-image: -ms-linear-gradient(left, rgb(231, 76, 60) 40%, rgb(52, 152, 219) 100%);
-  background: linear-gradient(to left, #00C9FF , #92FE9D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-
-  background: linear-gradient(to left, #fe8c00 , #f83600); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to left, #FF512F , #DD2476); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-
-#landing-play {
-  padding-top: 100px;
-}
-
-#youflix-landing {
-  font-family: 'Courier New';
-  padding-left: 200px;
-  padding-right: 200px;
-  font-size: 40px;
-  display: flex;
-  flex-direction: row;
-}
-
-#y {
-  color: #3498db; /* blue */
-  color: #F22613;
-  color: #F2784B;
-}
-
-#o {
-  color: #f2992e;
-  color: #EF4836;
-  color: #C8F7C5;
-  color: #F62459;
-  color: #FDE3A7;
-
-}
-
-#u {
-  color: #36465d;
-  color: #f1c40f;
-  color: #2ecc71;
-  color: #F5D76E;
-
-  color: #D35400;
-}
-#f {
-  color: #EF4836;
-  color: #a77dc2;
-
-  color: #3498DB;
-}
-#l {
-  color: #a77dc2;
-    color: #F64747;
-    color: #34495E;
-    color: #3498DB;
-    color: #34495E;
-}
-#i {
-  color: #2ecc71;
-  color: #C5EFF7;
-  color: #E4F1FE;
-
-}
-#x {
-  color: #f1c40f;
-  color: #2ecc71;
-  color: #19B5FE;
-}
-
-
-#y {
-  color: #e67e22; /* blue */
-}
-
-#o {
-  color: #e74c3c;
-}
-
-#u {
-  color: #8e44ad;
-}
-#f {
-  color: #2ecc71;
-}
-#l {
-  color: #3498db
-
-}
-#i {
-  color: #f1c40f;
-
-}
-#x {
-  color: #1abc9c;
-}
 
 
 /*#navbar-top-navbar-color-drama {
